[package]
name = "color-format"
version = "0.1.0"
edition = "2021"

[features]
default = ["runtime_color"]
runtime_color = ["lazy_static", "atty"]

[dependencies]
color-format-macros = { version = "0.1.0", path = "../color-format-macros" }
lazy_static = { version = "1.4", optional = true }
atty = { version = "0.2", optional = true }